--- a/index.html
+++ b/index.html
@@ -11,13 +11,79 @@
 <body>
 
     <div class="maingrid">
-        <div class="header"></div>
+        <div class="header">
+            <div class="header-top">
+                <input type="text" placeholder="Search...">
+                <img src="" alt="bell icon">
+                <img src="" alt="profile picture">
+                <p>Jakob Shavinski</p>
+            </div>
 
-        <div class="sidebar">
-            <div class="logo">Dashboard</div>
+            <div class="header-bottom">
+                <img src="" alt="profile picutre">
+                <div class="welcome">
+                    <p>Hi there,</p>
+                    <p>Jakob Shavinski (@jshavinski)</p>
+                </div>
+                <button type="button">New</button>
+                <button type="button">Upload</button>
+                <button type="button">Share</button>
+            </div>
         </div>
 
-        <div class="content"></div>
+        <div class="sidebar">
+            <div class="sidebar-top">
+                <img class ="logo" src="/images/view-dashboard.svg" alt="box logo">
+                <h1 class="logo-text">Dashboard</h1>
+            </div>
+
+            <div class="sidebar-middle">
+                <div class="home">
+                    <img src="images/home-account.svg" alt="home logo">
+                    <p>Home</p>
+                </div>
+                <div class="profile">
+                    <img src="images/account-box.svg" alt="profile logo">
+                    <p>Profile</p>
+                </div>
+                <div class="messages">
+                    <img src="images/message-text.svg" alt="message logo">
+                    <p>Messages</p> 
+                </div>
+                <div class="history">
+                    <img src="images/clock-time-four.svg" alt="history logo">
+                    <p>History</p> 
+                </div>
+                <div class="tasks">
+                    <img src="images/folder-multiple.svg" alt="tasks logo">
+                    <p>Tasks</p>
+                </div>
+                <div class="communities">
+                    <img src="images/account-group.svg" alt="communities logo">
+                    <p>Communities</p>
+                </div>
+            </div>
+
+            <div class="sidebar-bottom">
+                <div class="settings">
+                    <img src="images/cog.svg" alt="settings icon">
+                    <p>Settings</p>
+                </div>
+                <div class="support">
+                    <img src="images/help-box.svg" alt="support icon">
+                    <p>Support</p>
+                </div>
+                <div class="privacy">
+                    <img src="images/shield-check.svg" alt="privacy icon">
+                    <p>Privacy</p>
+                </div>
+
+            </div>
+        </div>
+
+        <div class="content">
+
+        </div>
     </div>
     
 </body>
