--- a/index.html
+++ b/index.html
@@ -13,21 +13,32 @@
     <div class="maingrid">
         <div class="header">
             <div class="header-top">
-                <input type="text" placeholder="Search...">
-                <img src="" alt="bell icon">
-                <img src="" alt="profile picture">
-                <p>Jakob Shavinski</p>
+                <div class="htop-left">
+                    <img class='icon' src="images/magnify.svg" alt="magnify icon">
+                    <input class='header-search'type="text" placeholder="Search...">
+                </div>
+                <div class="htop-right">
+                    <img class="icon" src="images/bell-ring-outline.svg" alt="bell icon">
+                    <img class="header-profile-pic" src="images/profilepic.jpg" alt="profile picture">
+                    <p>Jakob Shavinski</p>
+                </div>
             </div>
 
             <div class="header-bottom">
-                <img src="" alt="profile picutre">
-                <div class="welcome">
-                    <p>Hi there,</p>
-                    <p>Jakob Shavinski (@jshavinski)</p>
+
+                <div class="hbottom-left">
+                    <img class='hbottom-profilepic'src="images/profilepic.jpg" alt="profile picutre">
+                    <div class="welcome">
+                        <p>Hi there,</p>
+                        <p class="profile-name">Jakob Shavinski (@jshavinski)</p>
+                    </div>
                 </div>
-                <button type="button">New</button>
-                <button type="button">Upload</button>
-                <button type="button">Share</button>
+                
+                <div class="hbottom-right">
+                    <button type="button">New</button>
+                    <button type="button">Upload</button>
+                    <button type="button">Share</button>
+                </div>
             </div>
         </div>
 
@@ -39,42 +50,42 @@
 
             <div class="sidebar-middle">
                 <div class="home">
-                    <img src="images/home-account.svg" alt="home logo">
+                <img class='icon' src="/images/home-account.svg" alt="home logo">
                     <p>Home</p>
                 </div>
                 <div class="profile">
-                    <img src="images/account-box.svg" alt="profile logo">
+                    <img class='icon' src="images/account-box.svg" alt="profile logo">
                     <p>Profile</p>
                 </div>
                 <div class="messages">
-                    <img src="images/message-text.svg" alt="message logo">
+                    <img class='icon' src="images/message-text.svg" alt="message logo">
                     <p>Messages</p> 
                 </div>
                 <div class="history">
-                    <img src="images/clock-time-four.svg" alt="history logo">
+                    <img class='icon' src="images/clock-time-four.svg" alt="history logo">
                     <p>History</p> 
                 </div>
                 <div class="tasks">
-                    <img src="images/folder-multiple.svg" alt="tasks logo">
+                    <img class='icon' src="images/folder-multiple.svg" alt="tasks logo">
                     <p>Tasks</p>
                 </div>
                 <div class="communities">
-                    <img src="images/account-group.svg" alt="communities logo">
+                    <img class='icon' src="images/account-group.svg" alt="communities logo">
                     <p>Communities</p>
                 </div>
             </div>
 
             <div class="sidebar-bottom">
                 <div class="settings">
-                    <img src="images/cog.svg" alt="settings icon">
+                    <img class='icon' src="images/cog.svg" alt="settings icon">
                     <p>Settings</p>
                 </div>
                 <div class="support">
-                    <img src="images/help-box.svg" alt="support icon">
+                    <img class='icon' src="images/help-box.svg" alt="support icon">
                     <p>Support</p>
                 </div>
                 <div class="privacy">
-                    <img src="images/shield-check.svg" alt="privacy icon">
+                    <img class='icon' src="images/shield-check.svg" alt="privacy icon">
                     <p>Privacy</p>
                 </div>
 
