--- a/index.html
+++ b/index.html
@@ -93,6 +93,57 @@
         </div>
 
         <div class="content">
+            <div class="content-left">
+                <!-- <h1>Your Projects</h1> -->
+
+                <div class="card">
+                    <h3>Super Cool Project</h3>
+                    <div class="context">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam, rem corrupti! Fugiat temporibus</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <h3>Less Cool Project</h3>
+                    <div class="context">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam, rem corrupti! Fugiat temporibus ex, quidem unde aspernatur voluptatum doloremque quasi quos</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <h3>Impossible App</h3>
+                    <div class="context">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <h3>Easy Peasy App</h3>
+                    <div class="context">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam, rem corrupti! Fugiat temporibus ex, quidem unde aspernatur voluptatum doloremque quasi quos, earum asperiores</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <h3>Ad Blocker</h3>
+                    <div class="context">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam, rem corrupti! Fugiat temporibus ex, quidem unde aspernatur voluptatum doloremque quasi!</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <h3>Money Maker</h3>
+                    <div class="context">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam, rem corrupti! Fugiat temporibus ex, quidem unde aspernatur voluptatum doloremque quasi quos, earum asperiores</p>
+                    </div>
+                </div>
+                
+            </div>
+
+            <div class="content-right">
+                <h1>Announcements</h1>
+                <h1>Trending</h1>
+            </div>
 
         </div>
     </div>
